Fix spacing between huge story and top story on mobile

--- a/common/app/assets/stylesheets/module/facia/_baguette.scss
+++ b/common/app/assets/stylesheets/module/facia/_baguette.scss
@@ -2,9 +2,11 @@
     @include clearfix;
     background-color: $c-brandBlue;
 
-    @include rem((
-        margin-bottom: $gs-baseline*2 !important,
-    ));
+    @include mq(tablet) {
+        @include rem((
+            margin-bottom: $gs-baseline*2 !important,
+        ));
+    }
 
     .item__container {
         border-top: 4px solid white;
